# MINE-DD

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/next_steps/: 03_readthedocs.md  04_zenodo_integration.md
.github/workflows/: build.yml
MINE-DD/: NOTICE  next_steps.md  project_setup.md  sonar-project.properties
MINE-DD/.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  05_linting.md
MINE-DD/docs/: Makefile  index.rst
MINE-DD/mine_dd/: __init__.py  my_module.py
MINE-DD/tests/: test_my_module.py
Schemas/: bib.json  environmental.json  general.json  locations.json  patogens.json  schemacreation.ipynb  statistics.json
docs/: conf.py  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/examples/: embedding.rst  query.rst
lit-review/bib/round1/input/: irrelevant.rtf  relevant.rtf
lit-review/bib/round1/tmp_data/d93b0f5b846a4c788af1db90322d4ab1/: project.json
lit-review/bib/round1/tmp_data/d93b0f5b846a4c788af1db90322d4ab1/reviews/2a4c3bd1b6b04809927d749eb80e232e/: results.sql  settings_metadata.json
lit-review/bib/round2/output/tmp_data/2de90e88423d4c18a92ab75864ab51ec/: project.json
lit-review/bib/round2/output/tmp_data/2de90e88423d4c18a92ab75864ab51ec/reviews/78465a907c83444fa3b65407fe99cdd2/: results.sql  settings_metadata.json
lit-review/bib/round3/output/tmp_data/730f865c1ada43679b8c93bd7074d7ed/: project.json
lit-review/bib/round3/output/tmp_data/730f865c1ada43679b8c93bd7074d7ed/reviews/734b59bdb73749d8a843b529155c2c8b/: results.sql  settings_metadata.json
mine_dd/: parsepdf_db.py
minedd/: __init__.py  chat-api.py  chat.py  cli.py  document.py  embeddings.py  graph_rag.py  query.py  rag.py  settings_paperqa.json  utils.py
notebooks/: ASReviewLABprogressRecall.csv  create_bib_input.ipynb  database.ipynb  knee_method.ipynb  llamaParse.ipynb  llama_JSON_schema.ipynb  llama_pydantic.ipynb  llamaextract.ipynb  minedd_playground.ipynb  pdf_extractions.ipynb  text_generation_prompts.ipynb  tidy_bib.ipynb  use_embeddings_module.ipynb
notebooks/bib/: missing_abstracts-pubmed-9NOTanimal-set 2.csv
notebooks/infoextract/: bib_schema.json  demo.ipynb  extract_with_Mistral.ipynb  llama-parse.ipynb  predefinedschema.py  pydantic-schemas.ipynb  pydantic_schemas.py
notebooks/rag/ragllama3/: AskPoopQA.ipynb  evaluate-testset.py  rag-evaluation.ipynb  rag.py  ragllama3.ipynb
notebooks/rag/ragllama3/embeddings/: union.bson
scripts/: extract_pdf_content.py
src/mine_dd/: __init__.py  tidybib.py
tests/: run_query_tests.py  test_cli.py  test_document.py  test_embeddings.py  test_embeddings_integration.py  test_my_module.py  test_query.py  test_query_integration.py  test_rag.py  test_utils.py
tests/data/: test_embeddings.pkl
tests/data/excel/: test_questions.xlsx  test_questions_with_columns.xlsx
tools/: extract_pdf_content.py  visual_minedd.py  visual_rag.py
