[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minedd"
version = "0.1.0"
description = "Mining literature for diarrheal disease and climate factors relation"
readme = "README.md"
authors = [
    {name = "Mine-DD Team", email = "your.email@example.com"}
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "paper-qa>=5.5.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "tqdm>=4.67.1",
    "openpyxl>=3.1.5",
    "nest-asyncio>=1.6.0",
    "litellm>=1.52.16",
    "aiohttp>=3.11.7",
    "openai>=1.55.0",
    "pydantic>=2.10.1",
    "tiktoken>=0.8.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "build>=1.2.2"
]

# Reference information from CITATION.cff
[tool.cff]
message = "If you use this software, please cite it as below."
preferred-citation-path = "./CITATION.cff"

[project.urls]
"Homepage" = "https://github.com/MINE-DD/MINE-DD"
"Bug Tracker" = "https://github.com/MINE-DD/MINE-DD/issues"
"Documentation" = "https://github.com/MINE-DD/MINE-DD/blob/main/README.md"
"Source Code" = "https://github.com/MINE-DD/MINE-DD"

[project.scripts]
minedd-embed = "minedd.cli:embed_papers"
minedd-query = "minedd.cli:query_papers_cli"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
