[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Angel Daza", email = "j.daza@esciencecenter.nl" },
    { name = "Eva Viviani", email = "e.viviani@esciencecenter.nl" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
name = "minedd"
version = "0.1.0"
description = "Mining literature for diarrheal disease and climate factors relation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "fhaviary>=0.18.3",
    "paper-qa==5.20.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "tqdm>=4.67.1",
    "openpyxl>=3.1.5",
    "nest-asyncio>=1.6.0",
    "litellm>=1.52.16",
    "aiohttp>=3.11.7",
    "openai>=1.55.0",
    "pydantic>=2.10.1",
    "tiktoken>=0.8.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.6",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "gmft",
    "marker-pdf",
    "pymupdf4llm",
    "ollama>=0.3.3",
    "httpx>=0.27.2",
    "streamlit==1.46.0",
    "faiss-cpu>=1.11.0",
    "GrobidArticleExtractor>=0.7.0",
    "rank-bm25==0.2.2",
    "sentence-transformers>=5.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "build>=1.2.2",
    "ruff>=0.11.3"
]

[tool.setuptools.packages.find]
include = ["minedd*"]

# Reference information from CITATION.cff
[tool.cff]
message = "If you use this software, please cite it as below."
preferred-citation-path = "./CITATION.cff"

[project.urls]
Repository = "https://github.com/MINE-DD/MINE-DD"
Issues = "https://github.com/MINE-DD/MINE-DD/issues"
Changelog = "https://github.com/MINE-DD/MINE-DD/CHANGELOG.md"


[project.scripts]
minedd = "minedd.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["notebooks", "out", "tests"]
